# DICOM_RT_Viewer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  dicom_rt_viewer_v0.6.0_review_fixes.patch  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md
src/dicom_rt_viewer/: __init__.py  events.py  geometry.py  io.py  roi_operations.py  rtstruct_io.py  viewer.py
src/dicom_rt_viewer/event_controllers/: __init__.py  bbox_handler.py  brush_handler.py  crosshair_handler.py  viewer_events.py
src/dicom_rt_viewer/rendering/: contour_overlay.py  drawing_manager.py  dvh.py  isodose.py  layout.py  render.py
src/dicom_rt_viewer/state/: viewer_cache.py  viewer_state.py
src/dicom_viewer/: __init__.py  events.py  geometry.py  io.py  isodose.py  roi_operations.py  rtstruct_io.py  viewer.py  viewer_cache.py  viewer_state.py
src/dicom_viewer/event_controllers/: __init__.py  bbox_handler.py  brush_handler.py  crosshair_handler.py  viewer_events.py
src/dicom_viewer/rendering/: contour_overlay.py  drawing_manager.py  dvh.py  isodose.py  layout.py  render.py
src/dicom_viewer/state/: viewer_cache.py  viewer_state.py
tests/: test_brush_handler.py  test_geometry.py  test_io.py  test_performance_opt.py  test_render.py  test_roi_operations.py  test_viewer_state.py
