[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dicom-viewer"
dynamic = ["version"]
description = "SimpleITK-based DICOM MPR viewer widget for Tkinter"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "SimpleITK>=2.3",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pydicom>=2.4",
    "rt-utils>=1.2",
    "scikit-image>=0.21",
    "scipy>=1.11",
]

[project.optional-dependencies]
# Install with: pip install dicom-viewer[dev]
dev = [
    "pytest>=7",
    "mypy>=1.0",
]

[tool.hatch.version]
# __init__.py's __version__ is the single source of truth; pyproject.toml
# no longer duplicates it, so the two can no longer drift apart.
path = "src/dicom_viewer/__init__.py"

[tool.hatch.build.targets.wheel]
# src layout: only the package under src/ is included in the wheel.
packages = ["src/dicom_viewer"]

[tool.mypy]
python_version = "3.12"
strict = true