[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# Distribution name: "dicom-rt-viewer" (RT support is the differentiator and
# plain "dicom-viewer" is too generic to be discoverable on PyPI). The import
# package remains "dicom_viewer" — distribution and import names differing is
# a standard pattern (e.g. scikit-image / skimage).
name = "dicom-rt-viewer"
dynamic = ["version"]
description = "SimpleITK-based DICOM-RT MPR viewer widget for Tkinter (CT, RT-DOSE, RT-STRUCT, DVH)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "oki1002" }]
keywords = [
    "dicom",
    "dicom-rt",
    "radiotherapy",
    "medical-imaging",
    "mpr",
    "viewer",
    "rt-struct",
    "rt-dose",
    "dvh",
    "simpleitk",
    "tkinter",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed",
]

dependencies = [
    "SimpleITK>=2.3",
    "contourpy>=1.2",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pydicom>=2.4",
    "rt-utils>=1.2",
    "scikit-image>=0.21",
    "scipy>=1.11",
]

[project.urls]
Homepage = "https://github.com/oki1002/DICOM_RT_Viewer"
Repository = "https://github.com/oki1002/DICOM_RT_Viewer"
Issues = "https://github.com/oki1002/DICOM_RT_Viewer/issues"
Changelog = "https://github.com/oki1002/DICOM_RT_Viewer/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# Install with: pip install dicom-rt-viewer[dev]
dev = [
    "pytest>=7",
    "mypy>=1.0",
    "black>=24",
    "isort>=5.13",
]

[tool.hatch.version]
# __init__.py's __version__ is the single source of truth; pyproject.toml
# no longer duplicates it, so the two can no longer drift apart.
path = "src/dicom_viewer/__init__.py"

[tool.hatch.build.targets.wheel]
# src layout: only the package under src/ is included in the wheel.
# py.typed is picked up automatically because it lives inside the package.
packages = ["src/dicom_viewer"]

[tool.mypy]
python_version = "3.12"
# Realistic baseline: full --strict requires annotating every Tk/Matplotlib
# event-handler signature, which adds noise without catching real bugs in
# this codebase. The flags below keep the valuable checks (untyped-def
# bodies are still checked, Any-returns flagged) while allowing untyped
# callback parameters. Tightening back to strict is tracked in CHANGELOG.
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
ignore_missing_imports = true

[tool.black]
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
